Revert "Remove unused Utf8 methods"